2008-08-11  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #546892

	* e-gui-utils.c:
	* e-popup.c:
	Prefer gtk_image_new_from_icon_name() over e_icon_factory_get_image().

	* e-icon-factory.c (e_icon_factory_get_image):
	Kill this function.  Use gtk_image_new_from_icon_name().

	* e-icon-factory.c (e_icon_factory_get_icon_list):
	Kill this function.  Use gtk_window_set_icon_name().

2008-07-31  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #545568

	* e-plugin.c (ep_load):
	Make sure system plugins are enabled on startup.

2008-07-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #540282

	* e-print.c:
	Store printer and page settings in a key file rather than GConf.
	Also properly apply page settings to print operations, including
	custom margins.

2008-07-01  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #540972

	* e-plugin.c: (ep_load): Small memory leak fix.

2008-06-09  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #509595

	* e-logger.c: (e_logger_get_logs): Do not crash if file does not
	exists. Also be able to read lines more than 249 characters long.

2008-06-08  Matthew Barnes  <mbarnes@redhat.com>

	* e-logger.[ch]: Code cleanup.

2008-06-06  Tor Lillqvist  <tml@novell.com>

	* e-plugin.c (epl_loadmodule): Tell which plugin it could not load
	in the warning message.

2008-05-29  Frederic Crozat  <fcrozat@mandriva.com>

	** Fixes bug #535273
	        
	* Makefile.am:
	Link e-util and econduit libraries with gnome-pilot.

2008-05-22  Matthew Barnes  <mbarnes@redhat.com>

	* e-plugin.c:
	* e-plugin.h:
	Code cleanup.  Also add an "enabled" property to EPlugin.

2008-05-19  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #530392

	* e-util-labels.c (e_util_labels_add_with_dlg):
	Pressing Enter in the entry activates the default response.

2008-05-16  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #514383

	* e-error.c (e_error_newv): Widget packing adjustments.
